--- a/css/application.css
+++ b/css/application.css
@@ -9,6 +9,117 @@ body, html {
     src: url("../font/Maquette-Light.otf");
 }
 
+/*switch language begin*/
+
+.switchLanguageBtn {
+    position: absolute;
+    top: 18px;
+    right: -30px;
+    z-index: 9999;
+}
+
+.btnContainer {
+    position: relative;
+    width: 120px;
+    height: 34px;
+    /*margin: 50px auto;*/
+    cursor: pointer;
+}
+
+.btnContainer .btn2:hover {
+    background: #f7bb59;
+}
+
+.btnContainer .btn2 {
+    background: #faaa31;
+}
+
+.btnContainer .btn1, .btnContainer .btn2 {
+    position: relative;
+    width: 120px;
+    height: 100%;
+    margin: 2px 0;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+.btnContainer:hover .btn2 {
+    opacity: 1;
+    margin-top: 8px;
+}
+
+.btnContainer .btn2 {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    opacity: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.btnContainer .btn1 .btnFlag1, .btnContainer .btn2 .btnFlag2 {
+    position: absolute;
+    top: 2px;
+    left: 5px;
+    display: inline-block;
+    width: 30px;
+    height: 34px;
+    line-height: 34px;
+    /* text-align: left; */
+    /* vertical-align: top; */
+}
+
+.btnContainer .btn1 .btnFlag1 img, .btnContainer .btn2 .btnFlag2 img {
+    width: auto;
+    height: 14px;
+}
+
+.btnContainer .btn1 span, .btnContainer .btn2 span {
+    color: #000;
+    font-size: 16px;
+    /* vertical-align: sub; */
+    display: inline-block;
+    height: 34px;
+    line-height: 34px;
+    vertical-align: top;
+}
+
+.btnContainer:hover .sjx {
+    top: 15px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+.sjx {
+    display: inline-block;
+    border-right: 2px solid #fff;
+    border-top: 2px solid #fff;
+    height: 8px;
+    width: 8px;
+    /* margin: 50px auto 0; */
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    border-left: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+    position: absolute;
+    right: -20px;
+    top: 10px;
+}
+
+/*@media screen and (max-width: 500px) {*/
+/*.switchLanguageBtn {*/
+/*position: fixed;*/
+/*top: 20px;*/
+/*right: 20px;*/
+/*z-index: 9999;*/
+/*}*/
+/*}*/
+
+/*switch language end*/
+
 
 nav {
     position: fixed;
