--- a/css/application.css
+++ b/css/application.css
@@ -77,6 +77,7 @@ body, html {
 .btnContainer .btn1 span, .btnContainer .btn2 span {
     color: #000;
     font-size: 16px;
+    font-family: aschFont;
     /* vertical-align: sub; */
     display: inline-block;
     height: 34px;
@@ -119,7 +120,6 @@ body, html {
 /*}*/
 
 /*switch language end*/
-
 
 nav {
     position: fixed;
@@ -178,12 +178,13 @@ nav .navContainer .navRight {
     padding-right: 100px;
 }
 
-nav .navRight .switchLanguage{
+nav .navRight .switchLanguage {
     position: absolute;
     left: -20px;
+    display: none;
 }
 
-nav .navRight .switchLanguage button{
+nav .navRight .switchLanguage button {
     width: 60px;
     height: 25px;
     vertical-align: middle;
@@ -218,6 +219,7 @@ nav .navContainer .navRight .equalThan li a {
     height: 100%;
     color: #313131;
     font-size: 18px;
+    font-family: aschFont;
     padding-right: 20px
 }
 
@@ -329,8 +331,7 @@ nav .navContainer .navRight .downloadWhitePaperTwo {
     background-size: cover;
 }
 
-
-@media screen and (max-width: 1920px){
+@media screen and (max-width: 1920px) {
     .applicationContainer .applicationTop {
         width: 100%;
         height: 300px;
@@ -474,10 +475,6 @@ nav .navContainer .navRight .downloadWhitePaperTwo {
     background-size: cover;
 }
 
-
-
-
-
 .applicationContainer .applicationCenter .applicationContent .applicationContentRight .contentRightTitle {
     display: block;
     width: 96%;
@@ -519,7 +516,7 @@ nav .navContainer .navRight .downloadWhitePaperTwo {
     font-size: 16px;
     line-height: 22px;
     font-weight: bold;
-    white-space:nowrap
+    white-space: nowrap
 }
 
 .applicationContainer .applicationCenter .applicationContent .applicationContentRight .aschSide li p:nth-child(2) {
@@ -551,35 +548,36 @@ nav .navContainer .navRight .downloadWhitePaperTwo {
     padding-right: 40px;
 }
 
-.applicationContainer .applicationCenter .applicationContent .applicationContentRight .applicationLinks a:nth-child(2){
+.applicationContainer .applicationCenter .applicationContent .applicationContentRight .applicationLinks a:nth-child(2) {
     margin-left: 20px;
 }
 
-.applicationContainer .applicationCenter .applicationContent .applicationContentRight .applicationLinks a:hover{
-    background: linear-gradient(to bottom,#febb50,#e18e08);
+.applicationContainer .applicationCenter .applicationContent .applicationContentRight .applicationLinks a:hover {
+    background: linear-gradient(to bottom, #febb50, #e18e08);
 }
+
 .applicationContainer .applicationCenter .applicationContent .applicationContentRight .applicationLinks a {
     display: inline-block;
     width: 200px;
     height: 50px;
     line-height: 50px;
     text-align: center;
-    background: linear-gradient(to bottom,#febb50,#feb949);
+    background: linear-gradient(to bottom, #febb50, #feb949);
     border-radius: 3px;
     color: #fff;
     font-size: 20px;
 }
 
-.applicationContainer .applicationCenter .applicationIntroduction{
+.applicationContainer .applicationCenter .applicationIntroduction {
     width: 100%;
-    padding:60px 40px;
+    padding: 60px 40px;
     box-shadow: 0 0 10px #ccc;
     border-radius: 5px;
     box-sizing: border-box;
     margin-top: 40px;
 }
 
-.applicationContainer .applicationCenter .applicationIntroduction span{
+.applicationContainer .applicationCenter .applicationIntroduction span {
     display: block;
     font-size: 30px;
     color: #000;
@@ -587,7 +585,7 @@ nav .navContainer .navRight .downloadWhitePaperTwo {
     margin-bottom: 20px;
 }
 
-.applicationContainer .applicationCenter .applicationIntroduction p{
+.applicationContainer .applicationCenter .applicationIntroduction p {
     display: block;
     font-size: 18px;
     line-height: 27px;
@@ -595,8 +593,6 @@ nav .navContainer .navRight .downloadWhitePaperTwo {
     font-family: aschFont;
     margin-bottom: 20px;
 }
-
-
 
 footer {
     position: relative;
