--- a/css/application.css
+++ b/css/application.css
@@ -661,7 +661,7 @@ footer .footerRight:hover i {
 }
 
 footer .footerRight:hover span {
-    color: #567fdc
+    color: #ffa81c
 }
 
 footer .footerRight {
